<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/BackArrow"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/Arrow"
            android:contentDescription="@string/BackArrow"
            tools:ignore="contentDescriptions"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            app:srcCompat="@drawable/Profile"
            tools:ignore="contentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Profile_name"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/Profile_handle"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bio"
            android:paddingHorizontal="20dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Followers"
            android:layout_gravity="bottom"
            android:paddingHorizontal="20dp"
            android:fontFamily="sans-serif-black"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="130dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/items_sold"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/Message_me"
            android:textSize="11sp"
            android:backgroundTint="@color/grey"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="206dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="3dp"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="92dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="3dp"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="92dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="218dp"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="312dp"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription"/>


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription"/>

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="3dp"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="92dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="105dp"
            android:layout_marginTop="3dp"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription"/>


        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="bottom"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription"/>

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="92dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="105dp"
            android:layout_gravity="bottom"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription"/>


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription"/>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            app:srcCompat="@drawable/Square"
            tools:ignore="contentDescription"/>

    </FrameLayout>




</LinearLayout>